--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.brunothg</groupId>
 	<artifactId>pagee</artifactId>
+	<name>${project.groupId}:${project.artifactId}</name>
 	<version>1.0.0</version>
+	<description>MVC for JavaEE applications</description>
+	<url>https://github.com/brunothg/PagEE</url>
+	<packaging>jar</packaging>
 
 	<developers>
 		<developer>
